# SecureRelief

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
app/: providers.tsx
app/api/disaster-reports/: route.ts
app/api/donate/: route.ts
app/dashboard/admin/: page.tsx
app/dashboard/agency/: page.tsx
app/dashboard/beneficiary/: page.tsx  page.tsx.bak
app/dashboard/donor/: page.tsx
app/dashboard/government/: page.tsx
app/dashboard/oracle/: page.tsx
app/impact/[slug]/: page.tsx
app/login/: page.tsx
app/profile/: page.tsx
app/signup/: page.tsx
components/auth/: RoleGuard.tsx
components/landing/: Campaigns.tsx  Hero.tsx  Stats.tsx  TrustIndicators.tsx
components/map/: AidMap.tsx
components/shared/: DevToolbar.tsx  Navbar.tsx
components/ui/: Dialog.tsx  Toast.tsx
context/: AuthContext.tsx
contracts/: Cargo.toml  contracts.widl
contracts/src/: lib.rs  state.rs
contracts/src/modules/: mod.rs  oracle_mcp.rs  token.rs  utils.rs
frontend/: package.json
frontend-next/: lint_output.txt  lint_report.txt  next.config.ts  ts_errors.txt
frontend-next/src/app/: page.tsx
frontend-next/src/services/: pinataService.ts
frontend-next/src/store/: web3Store.ts
frontend/components/Web3/: ConnectionTester.tsx
frontend/src/app/: globals.css
lib/: config.ts
lib/auth/: roleConfig.ts
lib/web3/: hooks.ts
prisma/: schema.prisma  seed_balance.ts
prisma/migrations/20260117183545_rename_transaction_to_donation_add_voucher/: migration.sql
prisma/migrations/20260117184808_add_user_balance/: migration.sql
(+39 files in other folders)
