[package]
name = "contracts"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
weil_rs = {path = "./wadk/adk/rust/weil_rs"} # Enable HTTP for MCP
weil_macros = {path = "./wadk/adk/rust/weil_rs/weil_macros"}
weil_contracts = {path = "./wadk/adk/rust/weil_rs/weil_contracts"} # For FungibleToken

[lib]
crate-type = ["cdylib"]